--- a/Makefile.inc
+++ b/Makefile.inc
@@ -8,5 +8,5 @@ MAKE      = make
 
 COPT      = -O3
 CWARN     = -Wno-long-long
-CFLAGS    = -MD -MP -std=c11 -Wall -Wpedantic -Wextra $(CWARN) $(COPT) $(CINC) -Wno-unused-function
+CFLAGS    = -m32 -MD -MP -std=c11 -Wall -Wpedantic -Wextra $(CWARN) $(COPT) $(CINC) -Wno-unused-function
 MAKEFLAGS = --no-print-directory --section-alignment 0x1000 -I$(PWD)
